<resources>
    <string name="app_name">e-loan</string>
    <string name="learn_more">Learn more</string>
    <string name="sign_up">Sign up</string>
    <string name="Already_have">Already have an account ?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="logo">E-Loan</string>
    <string name="motto">Quickest, easiest and friendliest way to get a fast loan on your device!</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="text_view_description">We will send you a text to verify your number</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="text_view_254">+254</string>
    <string name="button_send_otp">SEND OTP</string>
    <string name="information_text">You must enter your phone number</string>
    <string name="logo1">Logo1</string>
    <string name="enter_otp">Enter the one time verification pin we sent you</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="information_text1">Please fill in your phone number</string>
    <string name="otp_code">Enter OTP code</string>
    <string name="otp_verification_failed">OTP verification failed, please try again</string>
    <string name="verification_failed">Verification Failed, please try again.</string>
    <string name="hello">HELLO AND WELCOME TO E-LOAN</string>
    <string name="welcome1">Welcome to Easy loan. Our mobile loans are quick, easy to apply and do not accrue interest like other mobile loans in the market. Proceed to check your loan limit and borrow an unsecured loan within 5 minutes straight to your M-PESA !</string>
    <string name="text_view_congratulations">Sorry, you do not qualify for a loan at this time. However, you should not lose hope, check back again after one month</string>
    <string name="button_check_limit">check your limit</string>
    <string name="text_view_conditions">To borrow your first loan, you are required to pay a processing fee of 100 kes.This fee will settle your interest, therefore, your loan will not attract any interest. You will pay back the exact amount loaned out to you. Isn\'t that awesome?</string>
    <string name="button_pay_fee">Accept terms &amp; pay fee</string>
    <string name="terms_conditions">TERMS AND CONDITIONS</string>
    <string name="logoo">Logoo</string>
    <string name="img_cancel">Cancel</string>
    <string name="phone_number">Phone number:</string>
    <string name="amount">Amount :</string>
    <string name="text_view_amount">KSH 100 </string>
    <string name="button_ok">OK</string>
    <string name="tv_send_money">Enter your phone number then click the OK button. This will send you an STK push notification from M-PESA. Enter your details and confirm the transaction to complete your registration.</string>
    <string name="error">An error occurred, please try again</string>
    <string name="success">Successfully sent!</string>
    <string name="banner_ad_unit_id">ca-app-pub-8199773971116374/9049374411</string>
</resources>