<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrd"
    android:backgroundTint="@color/design_default_color_secondary_variant"
    android:backgroundTintMode="multiply"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/text_view_254"
        app:layout_constraintTop_toBottomOf="@+id/text_view_description" />

    <TextView
        android:id="@+id/Text_view_enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="288dp"
        android:text="@string/enter_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/text_view_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_view_enter_phone" />

    <TextView
        android:id="@+id/text_view_254"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/text_view_254"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_description"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_send_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/button"
        android:text="@string/button_send_otp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_send_otp"
        app:layout_constraintEnd_toEndOf="@+id/button_send_otp"
        app:layout_constraintTop_toTopOf="@+id/button_send_otp" />

    <TextView
        android:id="@+id/text_view_information_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/information_text"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_otp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="206dp"
        android:layout_height="140dp"
        android:contentDescription="@string/logo1"
        app:layout_constraintBottom_toTopOf="@+id/Text_view_enter_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loan_image" />

</androidx.constraintlayout.widget.ConstraintLayout>