<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bckgrd">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_learn_more"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/rounded_button"
                        android:text="@string/learn_more"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/button_sign_up"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/sign_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp">

                    <TextView
                        android:id="@+id/text_view_already_have_an_account"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:text="@string/Already_have"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/background_light"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_log_in"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:linksClickable="true"
                        android:text="@string/log_in"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/background_light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_view_already_have_an_account"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/text_view_logo"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="150dp"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_motto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="55dp"
                android:text="@string/motto"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>