<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="@id/constraint"
        app:layout_constraintStart_toStartOf="@id/constraint"
        app:layout_constraintTop_toTopOf="parent">

        <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent">-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/skyblue"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="@id/frame"
            app:layout_constraintStart_toStartOf="@id/frame"
            app:layout_constraintTop_toTopOf="@id/frame">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/phone_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_send_money" />

                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />

                <TextView
                    android:id="@+id/text_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_view_amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/edt_enter_phone"
                    app:layout_constraintTop_toBottomOf="@+id/edt_enter_phone" />

                <Button
                    android:id="@+id/button_OK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:backgroundTint="@color/chk_lmt_btn"
                    android:text="@string/button_ok"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar5" />

                <EditText
                    android:id="@+id/edt_enter_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_number"
                    android:inputType="phone"
                    app:layout_constraintStart_toEndOf="@+id/text_view_phone_number"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_send_money" />

                <ProgressBar
                    android:id="@+id/progressBar5"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/button_OK"
                    app:layout_constraintStart_toStartOf="@+id/button_OK"
                    app:layout_constraintTop_toBottomOf="@+id/text_amount" />

                <TextView
                    android:id="@+id/text_view_send_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/tv_send_money"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/button_OK"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar5" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->